# veil

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/: FUNDING.yml
src/: main.rs
src/kernel/: async_shell.rs  main.rs  mod.rs  shell.rs
src/kernel/core/: mod.rs  std_vecs.rs
src/kernel/core/bios/: ebda.rs  mod.rs
src/kernel/core/bios/acpi/: address.rs  mod.rs
src/kernel/core/bios/acpi/tables/: acpi_table.rs  debug.rs  header.rs  mod.rs
src/kernel/core/bios/rsdt/: find.rs  mod.rs  pointer.rs  table.rs
src/kernel/core/mem/: alloc.rs  frame_allocator.rs  heap.rs  mod.rs  util.rs
src/kernel/internal/: mod.rs
src/kernel/internal/tables/: gdt.rs  mod.rs
src/kernel/internal/tables/idt/: hardware_interrupts.rs  idt_handlers.rs  mod.rs
src/kstd/: mod.rs
src/kstd/device/: keyboard.rs  mod.rs
src/kstd/device/serial/: mod.rs  vm_serial_stdout.rs
src/kstd/fmt/: macros.rs  mod.rs  writer.rs
src/kstd/kernel/: gdt.rs  idt.rs  interrupts.rs  mod.rs  next.rs  shell.rs
src/kstd/mem/: actual.rs  alloc.rs  bump_alloc.rs  heap.rs  mod.rs  pseudo.rs
src/kstd/screen/: mod.rs  vga.rs  vga_text_buffer.rs
src/lib/: kore.rs  mod.rs
src/lib/modules/: mod.rs
src/lib/modules/alloc_core/: mod.rs
src/lib/modules/alloc_core/bump_allocator/: alloc_definition.rs  global_impl.rs  mod.rs
src/lib/modules/alloc_core/dynamic_region_alloc/: alloc_settings.rs  allocator.rs  dra_definition.rs  global_impl.rs  mod.rs
src/lib/modules/alloc_core/libregions/: mod.rs  region.rs  region_util.rs
src/lib/modules/alloc_core/mithril_alloc/: alloc_definition.rs  global_impl.rs  mithril_allocator.rs  mod.rs  region.rs
src/lib/modules/alloc_core/noalloc_alloc/: allocator.rs  bucket_mgr.rs  buckets.rs  definition.rs  mem_track.rs  mod.rs  region.rs  size.rs  util.rs
src/lib/modules/async_core/: executor.rs  mod.rs
src/lib/modules/async_core/primitive/: executor.rs  mod.rs  waker.rs
src/lib/modules/async_core/stable/: executor.rs  mod.rs  waker.rs
src/lib/modules/bump_allocator/: alloc_definition.rs  bump_alloc.rs  global_impl.rs  mod.rs
src/lib/modules/device_core/: mod.rs
src/lib/modules/device_core/cpu/: cpuid.rs  mod.rs
src/lib/modules/device_core/pci/: mod.rs  support.rs
src/lib/modules/device_core/serial/: mod.rs
src/lib/modules/device_core/serial/ps2_keyboard/: mod.rs  ps2_keyboard_async.rs  ps2_keyboard_sync.rs
src/lib/modules/device_core/vga_text_mode/: macros.rs  mod.rs  vga_text_writer.rs
src/lib/modules/graphics_core/: graphics_mode.rs  mod.rs
src/lib/modules/graphics_core/vga/: grx_control.rs  mod.rs  port_controller.rs  sequencer.rs
src/lib/modules/graphics_core/vga/color/: c16.rs  mod.rs  text.rs  vga_default_palette.rs
src/lib/modules/qemu_serial_stdout/: macros.rs  mod.rs  writer.rs
src/lib/modules/serials/: mod.rs  ps2_keyboard.rs
src/lib/modules/string_writer/: mod.rs
src/lib/modules/vga_text_mode/: macros.rs  mod.rs  vga_text_writer.rs
src/lib/modules/vm_core/: mod.rs
src/lib/modules/vm_core/qemu/: mod.rs  qemu_exit.rs
src/lib/modules/vm_core/qemu/serial_stdout/: macros.rs  mod.rs  port.rs  writer.rs
src/lib/veil_std/: mod.rs
src/lib/veil_std/debug/: mod.rs
src/lib/veil_std/desync/: executor.rs  mod.rs  task.rs  task_id.rs
src/lib/veil_std/no_alloc/: bound_iterator.rs  mod.rs  stacked_list.rs
src/lib/veil_std/util/: bytes.rs  locked.rs  mod.rs  print.rs
src/test/: mod.rs
(+2 files in other folders)
