[package]
name = "veil"
version = "0.1.0"
edition = "2018"


[dependencies]
bootloader = "0.9.23"
x86_64 = "0.14.10"
spin = "0.5.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.6.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
test-success-exit-code = 33
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
[build]
target = "x86_64-veil.json"

