[package]
name = "veil"
version = "0.1.0"
edition = "2018"

[features]
debug = ["serial_debug", "mem_test"]
serial_debug = []
mem_test = []

[dependencies]
x86_64 = "0.14.10"
spin = "0.5.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.6.1"
linked_list_allocator = "0.9.0"

[dependencies.bootloader]
version = "0.9.23"
features = ["map_physical_memory"]
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
test-success-exit-code = 33
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
# [build]
# target = "x86_64-veil.json"

