[package]
name = "veil"
version = "0.1.0"
edition = "2018"

[features]
default = ["vm_core", "alloc_core", "device_core", "async_core"]

vm_core = ["qemu_features"]

qemu_features = ["serial_stdout", "qemu_powerdown"]
serial_stdout = []
qemu_powerdown = []

alloc_core = ["bucket_allocator"]
bucket_allocator = [] # Stable allocator that does not allocate on the heap
bump_allocator = [] # Backup allocator that requires the heap to be prepaged.

async_core = ["alloc_core", "stable_async_impl"]
primitive_async_impl = []
stable_async_impl = ["desync_atomics", "feat_async_has_pub_tasks"]
device_core = ["vga_text_mode", "serial_devices"]

serial_devices = ["ps2_keyboard"]
vga_text_mode = []
ps2_keyboard = ["ps2_keyboard_async"]
ps2_keyboard_sync = []
ps2_keyboard_async = ["async_core", "alloc_core"] # requires allocator and async executor

desync_atomics = []

feat_async_has_pub_tasks = []
[dependencies]
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.6.1"
linked_list_allocator = "0.10.2"
lock_api = "0.4.9"
hashbrown = "0.13.2"


[dependencies.x86_64]
version = "0.14.10"
features = ["inline_asm"]

[dependencies.bootloader]
version = "0.9.23"
features = ["map_physical_memory"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.spin]
version = "0.9.2"
default-features = false
features = ["mutex", "lazy", "spin_mutex", "rwlock"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]
test-success-exit-code = 33
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", 
    # add drives/ext4.img as a sata drive
    "-drive", "file=drives/ext4.img,format=raw,if=none,id=drive0",
]
# [build]
# target = "x86_64-veil.json"

